fix height issue son iphones

--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@ button:active, button:focus{
 }
 .app-container{
     height: 100vh;
+    height: -webkit-fill-available;
+    width: -webkit-fill-available;
     overflow: hidden;
-    max-width: 400px;
     background-color: #F9FFFB;
     position: relative;
 }
 .app-body{
-    clear: both;
     height: calc(100% - 90px);
     overflow: scroll;
     padding: 16px 5% 90px;
@@ -57,6 +57,7 @@ button:active, button:focus{
     .app-container {
         margin: auto;
         height: calc(100vh - 70px);
+        max-width: 400px;
     }
 
     .app-body {
@@ -315,12 +316,12 @@ button:active, button:focus{
 .modal#dishModal .modal-content{
     margin: 0;
 }
-.dish-wrapper{
+.modal#dishModal .dish-wrapper{
     display: flex;
     width: 100%;
     height: 100%;
 }
-.dish-wrapper img{
+.modal#dishModal .dish-wrapper img{
     margin: auto;
     width: 100%;
 }
